applications/source-gitlab/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: source
  name: source
