applications/source-gitlab/gitlab-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab-deployment
  namespace: source
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitlab
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: gitlab
    spec:
      nodeSelector:
        gitlab: "true"
      containers:
      - name: gitlab
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/xihe/sameersbn-gitlab:15.2.2
        ports:
        - name: http
          containerPort: 80
        - name: ssh
          containerPort: 22
        resources:
          requests:
            cpu: 10000m
            memory: 20000Mi
          limits:
            cpu: 5000m
            memory: 10000Mi
        volumeMounts:
        - mountPath: /home/git/data
          name: gitlab-data
        - mountPath: /home/git/gitlab-shell/hooks/
          name: gitlab-hooks-data
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 300
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 1
      restartPolicy: Always
      volumes:
      - name: gitlab-data
        persistentVolumeClaim:
          claimName: gitlab-data-volume
      - name: gitlab-hooks-data
        persistentVolumeClaim:
          claimName: gitlab-hooks-volume
