applications/source-gitlab/xihe-gitlab.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/proxy-body-size: "1G"
  name: xihe-gitlab-ingress
  namespace: source
spec:
  tls:
    - hosts:
        - source-xihe.test.osinfra.cn
      secretName: xihe-gitlab-tls
  rules:
    - host: source-xihe.test.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: xihe-gitlab-service
              servicePort: 8080
            path: /

---
apiVersion: v1
kind: Service
metadata:
  name: xihe-gitlab-service
  namespace: source
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 80
    - name: ssh
      port: 22
      targetPort: ssh
  selector:
    app: xihe-gitlab

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xihe-gitlab
  namespace: source
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xihe-gitlab
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: xihe-gitlab
    spec:
      nodeSelector:
        gitlab: "true"
      securityContext:
        runAsUser: 0
      containers:
      - name: gitlab
        image: gitlab/gitlab-ee:latest
        resources:
          requests:
            cpu: 3000m
            memory: 15000Mi
          limits:
            cpu: 3000m
            memory: 15000Mi
        volumeMounts:
        - mountPath: /etc/gitlab
          name: gitlab-data
          subPath: config
        - mountPath: /var/log/gitlab
          name: gitlab-data
          subPath: logs
        - mountPath: /var/opt/gitlab
          name: gitlab-data
          subPath: data
      restartPolicy: Always
      volumes:
      - name: gitlab-data
        persistentVolumeClaim:
          claimName: xihe-gitlab-data-volume
